Added Total_Sales
