# routes/route.py
@@ -11,6 +11,7 @@ from controllers.Extraction.extraction import Extracting, ExtractingFromOfficeId
 from controllers.Extraction.extraExtraction import ExtractingFromDeliveryPlan
 from controllers.Dashboard.Sales.dropdown_list import dropdown_list
 from controllers.Dashboard.Sales.sales_list import sales_based_on_admin
+from controllers.Dashboard.Sales.total_sales import total_sales
 from controllers.Dashboard.Sales.card_details import CardDetails
 from controllers.Dashboard.Godown_stocks.godown_list import Godown_list
 from controllers.Dashboard.Godown_stocks.godownType_list import GodownType
@@ -184,6 +185,18 @@ def sales_list(_FromDate,_ToDate,_OfficeId,_IsAdmin):
     df,product_type_list = sales_based_on_admin(office_id,is_admin,from_date,to_date,cnxn)
     cnxn.close()
     return jsonify({"graph1":df,"graph2":product_type_list})
+
+@route_page.route("/api/v1/dashboard/total_sales/<string:_FromDate>/<string:_ToDate>/<string:_OfficeId>/<string:_IsAdmin>", methods=["GET"])
+def total_sales_list(_FromDate,_ToDate,_OfficeId,_IsAdmin):
+    from_date = _FromDate
+    to_date = _ToDate
+    office_id = _OfficeId
+    is_admin = int(_IsAdmin)
+
+    cnxn = pyodbc.connect(ConnectionString)
+    df=total_sales(office_id,is_admin,from_date,to_date,cnxn)
+    cnxn.close()
+    return jsonify({"graph1":df})
 
 @route_page.route("/api/v1/dashboard/card_details_list/<string:_OfficeId>/<string:_IsAdmin>", methods=["GET"])
 def card_details_list(_OfficeId,_IsAdmin):
